[project]
name = "rlx"
version = "0.1.0"
description = "A reinforcement learning framework based on MLX"
authors = [
    {name = "Noah Farr", email = "login@noahfarr.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.2.0",
    "gymnasium[classic-control]>=0.29.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlx"]
